--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Webpack</title>
-    <script src='analytics.js'></script>
+   
 </head>
 <body>
-    <div class="container">
-        <h1>Webpack Course</h1>
-    </div>
-    <script src='Post.js'></script>
-    <script src='Index.js'></script>
+    <div class="site-container">
+        <header class="header">
+         HELLO WORLD
+        </header>
+        <img src="img/img1.png" alt="img">
+      </div>
 </body>
 </html>
