problem whit hmr on CSS

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
 <body>
     <div class="site-container">
         <header class="header">
-         HELLO WORLD
+         HELLO WORLD!!
         </header>
-        <img src="img/img1.png" alt="img">
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, sunt incidunt facilis quia ducimus error asperiores nobis ratione amet totam aperiam consequuntur 
+             cum fugiat corporis? Nostrum nesciunt officiis voluptatum. Impedit?</p>
       </div>
 </body>
 </html>
